external-orders/force-app/main/default/objects/Sales_Order_Items__c/Sales_Order_Items__c.object-meta.xml
<CustomObject>
    <description>Details of Sales Orders  by line item</description>
    <label>Sales Order Items</label>
    <nameField>
        <label>Order Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>