external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <label>Account No</label>
    <length>7</length>
    <type>Text</type>
</CustomField>