external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Account_Text_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Text_ID__c</fullName>
    <formula>Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Text ID</label>
    <type>Text</type>
</CustomField>