external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/B2B_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_ID__c</fullName>
    <description>B2B Unique ID for Customer Account</description>
    <inlineHelpText>B2B Unique ID for Customer Account</inlineHelpText>
    <label>B2B Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>