external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/B2B_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_ID__c</fullName>
    <description>B2B Unique ID for Product</description>
    <inlineHelpText>B2B Unique ID for Product</inlineHelpText>
    <label>B2B Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>