external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Backorder_Qty__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Qty__c</fullName>
    <formula>IF(Ordered_Qty__c &lt; 0, 0, Ordered_Qty__c  -  Shipped_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backorder Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>