external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Backorder_Value__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Value__c</fullName>
    <formula>Backorder_Qty__c *   Net_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backorder Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>