external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <description>Date order was created in B2B</description>
    <inlineHelpText>Date order was created in B2B</inlineHelpText>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>