external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Credited_Qty__c.field-meta.xml
<CustomField>
    <fullName>Credited_Qty__c</fullName>
    <inlineHelpText>Amount that has been credited or returned</inlineHelpText>
    <label>Credited Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>