external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Delivery_Date_Was_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Was_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The delivery date was not provided by B2B and was calculated for Salesforce.</inlineHelpText>
    <label>Delivery Date Was Calculated</label>
    <type>Checkbox</type>
</CustomField>