external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <description>Shipping and Freight terms</description>
    <inlineHelpText>Shipping and Freight terms</inlineHelpText>
    <label>Incoterm</label>
    <length>3</length>
    <type>Text</type>
</CustomField>