external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price__c</fullName>
    <formula>Unit_Price__c - (Discount__c /  Ordered_Qty__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>