external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula>value( Sort_Order__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label - Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>