external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Label_Account_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Label_Account_Name_Number__c</fullName>
    <formula>Account_ID__r.Name &amp; &quot; (&quot; &amp;  Account_No__c &amp; &quot;)&quot;</formula>
    <label>Label - Account Name &amp; Number</label>
    <type>Text</type>
</CustomField>