external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Label_Account_RDD__c.field-meta.xml
<CustomField>
    <fullName>Label_Account_RDD__c</fullName>
    <formula>Account_ID__r.Name &amp; &quot;(&quot; &amp;  text(Delivery_Date__c) &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label - Account &amp; RDD</label>
    <type>Text</type>
</CustomField>