external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Label_Local_Code_GMC_PH__c.field-meta.xml
<CustomField>
    <fullName>Label_Local_Code_GMC_PH__c</fullName>
    <formula>PH1_Code__c &amp; &quot;-&quot; &amp;  Local_Code__c &amp; &quot; (&quot; &amp;  Material__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label - Local Code, GMC &amp; PH</label>
    <type>Text</type>
</CustomField>