external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Label_Order_and_PO__c.field-meta.xml
<CustomField>
    <fullName>Label_Order_and_PO__c</fullName>
    <formula>Order_No__c &amp; &quot; PO: &quot; &amp;  Sales_Order_ID__r.PO_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label - Order and PO</label>
    <type>Text</type>
</CustomField>