external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Label_Payer_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Label_Payer_Name_Number__c</fullName>
    <formula>Payer_ID__r.Name &amp; &quot; (&quot; &amp;  Payer_No__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label - Payer Name &amp; Number</label>
    <type>Text</type>
</CustomField>