external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Label_PO_Order__c.field-meta.xml
<CustomField>
    <fullName>Label_PO_Order__c</fullName>
    <formula>&quot;PO: &quot; &amp; Sales_Order_ID__r.PO_No__c &amp; &quot; Order: &quot; &amp; Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label - PO &amp; Order</label>
    <type>Text</type>
</CustomField>