external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Local_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Code__c</fullName>
    <label>Local Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>