external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material (GMC)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>