external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Material_ID__c.field-meta.xml
<CustomField>
    <fullName>Material_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Order Items</relationshipLabel>
    <relationshipName>Sales_Order_Items_Product</relationshipName>
    <type>Lookup</type>
</CustomField>