external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <description>Price after Discounts</description>
    <inlineHelpText>Price after Discounts</inlineHelpText>
    <label>*D* Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>