external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAP_Order_Types</valueSetName>
    </valueSet>
</CustomField>