external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <formula>Unit_Price__c * Ordered_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>