external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Ordered_Qty__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Qty__c</fullName>
    <inlineHelpText>Amount that was ordered</inlineHelpText>
    <label>Ordered Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>