external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Items (Payer ID)</relationshipLabel>
    <relationshipName>Sales_Order_Items_Payer</relationshipName>
    <type>Lookup</type>
</CustomField>