external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Payer_Text_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_Text_ID__c</fullName>
    <formula>Payer_ID__c</formula>
    <label>Payer Text ID</label>
    <type>Text</type>
</CustomField>