external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <length>10</length>
    <type>Text</type>
</CustomField>