external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/PH1_Code__c.field-meta.xml
<CustomField>
    <fullName>PH1_Code__c</fullName>
    <label>PH1 Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>