external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/PH1_Description__c.field-meta.xml
<CustomField>
    <fullName>PH1_Description__c</fullName>
    <label>PH1 Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>