external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Product_Text_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Text_ID__c</fullName>
    <formula>Material_ID__r.Id</formula>
    <label>Product Text ID</label>
    <type>Text</type>
</CustomField>