external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Saleperson_Text_ID__c.field-meta.xml
<CustomField>
    <fullName>Saleperson_Text_ID__c</fullName>
    <formula>Sales_Person_ID__c</formula>
    <label>Saleperson Text ID</label>
    <type>Text</type>
</CustomField>