external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Sales_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_ID__c</fullName>
    <description>Identifies the parent order number</description>
    <inlineHelpText>Identifies the parent order number</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Sales Order Items</relationshipLabel>
    <relationshipName>Sales_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>