external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Sales_Order_Text_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Text_ID__c</fullName>
    <formula>Id</formula>
    <label>Sales Order Text ID</label>
    <type>Text</type>
</CustomField>