external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Sales_Person_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Code__c</fullName>
    <label>Salesperson Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>