external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Sales_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Order_Items_User</relationshipName>
    <type>Lookup</type>
</CustomField>