external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Sales_Person_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Role__c</fullName>
    <formula>Sales_Person_ID__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesperson Role</label>
    <type>Text</type>
</CustomField>