external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Shipped_Qty__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Qty__c</fullName>
    <inlineHelpText>Amount that has been shipped but not invoiced</inlineHelpText>
    <label>Shipped Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>