external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Shipped_Value__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Value__c</fullName>
    <formula>Shipped_Qty__c *  Invoice_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>