external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Item&apos;s position within the order</description>
    <inlineHelpText>Item&apos;s position within the order</inlineHelpText>
    <label>Line Item</label>
    <length>10</length>
    <type>Text</type>
</CustomField>