external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>if( Shipped_Qty__c =  Ordered_Qty__c, &quot;Shipped&quot;, 
if( Shipped_Qty__c &gt; 0, &quot;Partially Shipped&quot;, 
if( Backorder_Qty__c  = Ordered_Qty__c, &quot;Backordered&quot;, 
if( Backorder_Qty__c &gt;  0, &quot;Partially Backordered&quot;, 
if( Credited_Qty__c  = Ordered_Qty__c, &quot;Credited&quot;, 
if( Credited_Qty__c &gt; 0, &quot;Partially Credited&quot;, &quot;Processing&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>