external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <inlineHelpText>Total Volume of detail line in Meters Cubed</inlineHelpText>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>