external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Price before discounts</description>
    <inlineHelpText>Price before discounts</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>