external-orders/force-app/main/default/objects/Sales_Order_Items__c/fields/Value_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Value_After_Discount__c</fullName>
    <formula>Order_Value__c -  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>